# productizing-deepseek

./: .gitignore  README.md  pyproject.toml
src/productizing_deepseek/: clients.py  custom_load.py  custom_vllm_llama_1b.py  custom_vllm_llama_70b.py  custom_vllm_llama_8b.py  custom_vllm_qwen_32b.py  custom_vllm_r1.py
